--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-My GitHub Page
+<!DOCTYPE html><meta charset="utf-8"><meta http-equiv="refresh" content="0; URL=https://Nuure.github.io/teamcity-testing-framework/33/">
+<meta http-equiv="Pragma" content="no-cache"><meta http-equiv="Expires" content="0">
